# fillico

./: CHANGELOG.md  build.py  fillico.spec  main.py  pyproject.toml
.github/workflows/: build-release.yml  pages.yml
docs/: CNAME  DEVELOPER_GUIDE.md  USER_GUIDE.md  index.html
docs/css/: landing.css
docs/js/: landing.js
landing/: index.html
landing/css/: landing.css
landing/js/: landing.js
scripts/: build-landing.py
sources/: process_assets.py
src/: __init__.py
src/core/: __init__.py  pdf_processor.py
src/installer/: windows_context_menu.py
src/ui/: app.py  quick_mode.py
web/: index.html
web/css/: components.css  layout.css  variables.css
web/js/: app.js  bg-assets.js
